--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "@mui/icons-material": "^5.15.1",
     "@mui/material": "^5.15.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-text-mask": "^5.5.0",
+    "text-mask-addons": "^3.8.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
+    "@types/react-text-mask": "^5.4.14",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
     "@vitejs/plugin-react": "^4.2.1",
