--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "text-mask-addons": "^3.8.0"
   },
   "devDependencies": {
+    "@types/node": "^20.11.0",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@types/react-text-mask": "^5.4.14",
