--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^5.15.1",
     "@mui/material": "^5.15.1",
     "@mui/x-data-grid": "^6.18.7",
+    "@mui/x-data-grid-generator": "^6.18.7",
     "@reduxjs/toolkit": "^2.0.1",
     "bignumber.js": "^9.1.2",
     "react": "^18.2.0",
