--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.0.4",
+    "react-table": "^7.8.0",
     "react-text-mask": "^5.5.0",
     "text-mask-addons": "^3.8.0"
   },
