add initial react-table

--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@reduxjs/toolkit": "^2.0.1",
     "bignumber.js": "^9.1.2",
     "react": "^18.2.0",
+    "react-contenteditable": "^3.3.7",
     "react-dom": "^18.2.0",
+    "react-popper": "^2.3.0",
     "react-redux": "^9.0.4",
     "react-table": "^7.8.0",
     "react-text-mask": "^5.5.0",
@@ -29,6 +31,7 @@
     "@types/node": "^20.11.0",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
+    "@types/react-table": "^7.7.19",
     "@types/react-text-mask": "^5.4.14",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
