--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
   "dependencies": {
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "@faker-js/faker": "^8.3.1",
     "@mui/icons-material": "^5.15.1",
     "@mui/material": "^5.15.1",
     "@mui/x-data-grid": "^6.18.7",
     "@mui/x-data-grid-generator": "^6.18.7",
     "@reduxjs/toolkit": "^2.0.1",
     "bignumber.js": "^9.1.2",
+    "faker": "^5.5.3",
     "react": "^18.2.0",
     "react-contenteditable": "^3.3.7",
     "react-dom": "^18.2.0",
