--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mui/x-data-grid-generator": "^6.18.7",
     "@reduxjs/toolkit": "^2.0.1",
     "bignumber.js": "^9.1.2",
+    "clsx": "^2.1.0",
     "faker": "^5.5.3",
     "react": "^18.2.0",
     "react-contenteditable": "^3.3.7",
