migrate to version 8 react-table

--- a/package.json
+++ b/package.json
@@ -18,15 +18,14 @@
     "@mui/x-data-grid": "^6.18.7",
     "@mui/x-data-grid-generator": "^6.18.7",
     "@reduxjs/toolkit": "^2.0.1",
+    "@tanstack/react-table": "^8.11.6",
     "bignumber.js": "^9.1.2",
-    "clsx": "^2.1.0",
     "faker": "^5.5.3",
     "react": "^18.2.0",
     "react-contenteditable": "^3.3.7",
     "react-dom": "^18.2.0",
     "react-popper": "^2.3.0",
     "react-redux": "^9.0.4",
-    "react-table": "^7.8.0",
     "react-text-mask": "^5.5.0",
     "text-mask-addons": "^3.8.0"
   },
@@ -34,7 +33,6 @@
     "@types/node": "^20.11.0",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
-    "@types/react-table": "^7.7.19",
     "@types/react-text-mask": "^5.4.14",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
