--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/material": "^5.15.1",
     "@mui/x-data-grid": "^6.18.7",
     "@mui/x-data-grid-generator": "^6.18.7",
+    "@react-spring/web": "^9.7.3",
     "@reduxjs/toolkit": "^2.0.1",
     "@tanstack/react-table": "^8.11.6",
     "bignumber.js": "^9.1.2",
